--- a/style.css
+++ b/style.css
@@ -44,28 +44,43 @@ body::before {
 canvas {
   border: 2px dashed greenyellow;
   animation: border infinite 3s;
-  border-radius: 25px;
+  border-radius: 50%;
   margin-top: 130px;
   box-shadow: 5px 5px 5px #fff;
 }
 
 @keyframes border {
   0% {
-    border-radius: 0px;
+    border-radius: 50%;
+  }
+  10% {
+    border-radius: 40%;
   }
   20% {
-    border-radius: 5px;
+    border-radius: 30%;
+  }
+  30% {
+    border-radius: 20%;
   }
   40% {
-    border-radius: 10px;
+    border-radius: 10%;
+  }
+  50% {
+    border-radius: 0%;
   }
   60% {
-    border-radius: 15px;
+    border-radius: 10%;
+  }
+  70% {
+    border-radius: 20%;
   }
   80% {
-    border-radius: 20px;
+    border-radius: 30%;
+  }
+  90% {
+    border-radius: 40%;
   }
   100% {
-    border-radius: 25px;
+    border-radius: 50%;
   }
 }
